#ifndef ERROR_CODE_HPP
#define ERROR_CODE_HPP

enum ErrorCode {
    E_OK = 0,
    E_NOT_OK = 1
};

#endif // ERROR_CODE_HPP