#ifndef DRIVERS_HPP
#define DRIVERS_HPP

#define DRIVERS_NUMBER 4

enum Drivers {
    D_DISPLAY = 0,
    D_SCHEDULER = 1,
    D_WIFI = 2,
    D_NEMA17 = 3,
};

enum DataSignals {
    // WIFI
    S_GET_WIFI_STATUS = 0,
    S_TRIGGER_RESET,
    
    //OLED
    S_OLED_WIFI_DISCONNECTED,
    S_OLED_WIFI_CONNECTED,
    S_OLED_SYSTEM_CONFIG_MODE,
    S_OLED_SYSTEM_BOOT_STATE,
    S_OLED_SYSTEM_FULL_ACTIVE,
    S_OLED_TIME_DISPLAY,
    S_SET_OLED_RAISING,
    S_SET_OLED_LOWERING,

    //NEMA17
    S_SET_NEMA_UP_STATUS,
    S_SET_NEMA_DOWN_STATUS,
    S_SET_NEMA_HOLD_STATUS,
    S_SET_NEMA_RELEASE_STATUS,
    S_SET_NEMA_WORKING_TIME,
    S_SET_NEMA_MAX,
    S_SET_NEMA_MIN,
    S_TRIGGER_NEMA_LOWERING,
    S_TRIGGER_NEM_RAISING,

    //SCHEDULER
    S_SCHEDULER_FETCH_DATA,
    S_SCHEDULER_SET_NEMA_LOW_TIME,
    S_SCHEDULER_SET_NEMA_UP_TIME,

};

enum DataSignalsResponse {
    // WIFI
    S_WIFI_CONNECTED = 0,
    S_WIFI_NOT_CONNECTED = 1,
    S_WIFI_CONFIG_MODE = 2

    // NEMA17
};

#endif // DRIVERS_HPP